# zkscript_package

./: .gitignore  ADEPTER_USER_AGREEMENT.txt  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
docs/: bilinear_pairings.md  elliptic_curves.md  finite_fields.md  groth16.md  merkle_tree.md  merkle_trees.md  secp256k1.md  stack_elements.md  transaction_introspection.md
examples/: README.md  script.py  tx_configuration.toml
examples/ai_inference/: Cargo.toml  README.md
examples/ai_inference/parameters/: bias_1.txt  bias_2.txt  expected_output.txt  input.txt  weight_1.txt  weight_2.txt
examples/ai_inference/proof/: proof.json  public_inputs.json  verifying_key.json
examples/ai_inference/src/: main.rs
examples/ai_inference/test_parameters/: weight_2.txt
examples/sha256/: Cargo.toml  README.md  parameters.json
examples/sha256/proof/: proof.json  public_inputs.json  verifying_key.json
examples/sha256/src/: main.rs
examples/square_root/: Cargo.toml  README.md  parameters.json
examples/square_root/proof/: proof.json  public_inputs.json  verifying_key.json
examples/square_root/src/: main.rs
nft_example/: README.md
nft_example/bitcoin_interface/: tcp.ipynb  tcp_utils.py  tx_engine_utils.py
nft_example/nft_proof_system/: Cargo.toml  README.md
nft_example/nft_proof_system/configs/config_base/: setup.toml
nft_example/nft_proof_system/configs/config_rec_2/: verify.toml
nft_example/nft_proof_system/configs/config_rec_4/: prove.toml
nft_example/nft_proof_system/src/data_structures/: verifying_data.rs
notes/: bibliography.bib  bilinear_pairings.tex
script_examples/pedersen_commitment/: __init__.py  pedersen_commitment.py  pedersen_opening_key.py  pedersen_unlocking_key.py
src/: __init__.py
src/zkscript/: __init__.py
src/zkscript/bilinear_pairings/: __init__.py
src/zkscript/bilinear_pairings/bls12_381/: __init__.py  bls12_381.py  fields.py  final_exponentiation.py  line_functions.py  miller_output_operations.py  parameters.py  size_estimation_function.py
src/zkscript/bilinear_pairings/mnt4_753/: __init__.py  fields.py  final_exponentiation.py  line_functions.py  miller_output_operations.py  mnt4_753.py  parameters.py  size_estimation_function.py
src/zkscript/bilinear_pairings/model/: __init__.py  cyclotomic_exponentiation.py  miller_loop.py  model_definition.py  pairing.py  triple_miller_loop.py  triple_miller_loop_proj.py
src/zkscript/elliptic_curves/: __init__.py  ec_operations_fq.py  ec_operations_fq2.py  ec_operations_fq2_projective.py  ec_operations_fq_projective.py  ec_operations_fq_unrolled.py  util.py
src/zkscript/fields/: __init__.py  fq.py  fq12_2_over_3_over_2.py  fq12_3_over_2_over_2.py  fq2.py  fq2_over_2_residue_equal_u.py  fq3.py  fq4.py  fq6_3_over_2.py  prime_field_extension.py
src/zkscript/groth16/: __init__.py
src/zkscript/merkle_tree/: __init__.py  merkle_tree.py  merkle_tree_blog_post.md
src/zkscript/merkle_trees/: __init__.py  merkle_tree.py
src/zkscript/reftx/: __init__.py  reftx.py
src/zkscript/script_types/: __init__.py  stack_elements.py
src/zkscript/transaction_introspection/: __init__.py  transaction_introspection.py
src/zkscript/types/: __init__.py  stack_elements.py  unlocking_keys.py
src/zkscript/util/: __init__.py  utility_classes.py  utility_functions.py  utility_script_params.py  utility_scripts.py
tests/: conftest.py
tests/bilinear_pairings/: test_bilinear_pairings.py  util.py
tests/bilinear_pairings/bls12_381/: final_exponentiation.py  line_functions.py  miller_loop.py  miller_output_operations.py  pairing.py  triple_miller_loop.py  triple_pairing.py
tests/bilinear_pairings/mnt4_753/: final_exponentiation.py  line_functions.py  miller_loop.py  miller_output_operations.py  pairing.py  triple_miller_loop.py  triple_pairing.py
tests/elliptic_curves/: ec_operations_fq.py  ec_operations_fq2.py  ec_operations_fq_unrolled.py  test_ec_arithmetic.py  test_ec_arithmetic_projective.py  test_ec_arithmetic_projective_fq2.py  util.py  util_projective_ec.py
tests/elliptic_curves/sep256k1/: test_secp256k1.py
tests/fields/: fq12_2_over_3_over_2.py  fq12_3_over_2_over_2.py  fq2_non_residue_is_minus_one.py  fq2_non_residue_is_not_minus_one.py  fq4.py  fq6_3_over_2.py  test_fields.py  util.py
tests/groth16/: bls12_381_groth16.py  mnt4_753_groth16.py  test_groth16.py
tests/merkle_tree/: __init__.py  test_merkle_trees.py
tests/merkle_trees/: __init__.py  test_merkle_trees.py  util.py
tests/pedersen_commitment/: test_pedersen_commitment.py
tests/reftx/: test_reftx.py
tests/transaction_introspection/: test_transaction_introspection.py
tests/types/: test_msm.py  test_msm_projective.py  test_stack_elements.py  test_unrolled_multiplication.py  test_unrolled_projective_multiplication.py
tests/utility_scripts/: test_utility_functions.py  test_utility_scripts.py  util.py
token_examples/: README.md  __init__.py  tx_engine_utils.py
token_examples/nft/: __init__.py  tcp.ipynb  tcp_utils.py
token_examples/nft/nft_proof_system/: Cargo.toml  README.md
token_examples/proof_of_burn/: proof_of_burn.ipynb  utils.py
token_examples/proof_of_burn/burn_proof_system/: Cargo.toml  proving_data.toml
token_examples/proof_of_burn/tcp_proof_system/: Cargo.toml  README.md
zkscript/bilinear_pairings/bls12_381/: bls12_381.py  fields.py  final_exponentiation.py  line_functions.py  miller_output_operations.py  parameters.py
zkscript/bilinear_pairings/mnt4_753/: fields.py  final_exponentiation.py  line_functions.py  miller_output_operations.py  mnt4_753.py  parameters.py
zkscript/bilinear_pairings/model/: cyclotomic_exponentiation.py  miller_loop.py  model_definition.py  pairing.py  triple_miller_loop.py
zkscript/elliptic_curves/: ec_operations_fq.py  ec_operations_fq2.py  ec_operations_fq_unrolled.py
zkscript/fields/: fq12_2_over_3_over_2.py  fq12_3_over_2_over_2.py  fq2.py  fq4.py  fq6_3_over_2.py
zkscript/groth16/bls12_381/: bls12_381.py
zkscript/groth16/mnt4_753/: mnt4_753.py
zkscript/groth16/model/: groth16.py
zkscript/util/: utility_scripts.py
(+69 files in other folders)
