[package]
name = "ai_inference"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", features = ["crh","r1cs"] }
ark-ff = "0.4.2"
ark-groth16 = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = "0.4.2"
ark-snark = "0.4.0"
ark-sponge = "0.3.0"
ark-std = "0.4.0"
ark-test-curves = {version = "0.4.2", features = ["bls12_381_curve","ed_on_bls12_381"]}
field-matrix-utils = "0.1.1"
num-traits = "0.2.19"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde_json = "1.0.127"
